--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.4.2",
     "pg": "^8.0.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
     "@types/express": "4.17.3",
