Adiciona prettier --write ao lint-staged
Prettier será executado em arquivos que estão em stage prontos para commit.

--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "typescript": "^3.8.3"
   },
   "lint-staged": {
-    "*.ts": "eslint --fix"
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged --allow-empty"
     }
   }
 }
