--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -20,6 +21,7 @@
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
     "@types/multer": "^1.4.2",
