Criação da seeder de usuários

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,6 +8,8 @@
   "database": "easyimoveis",
   "entities": ["./src/models/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
+  "seeds": ["./src/database/seeds/*.ts"],
+  "factories": ["./src/database/factories/*.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations"
   }
