--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev:server": "cross-env NODE_ENV=development ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
     "start": "export NODE_ENV=production && node dist/server.js",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
-    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
-    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
+    "seed:config:dev": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config",
+    "seed:run:dev": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "seed:run": "node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
